force-app/main/default/objects/Price_Book_entry__c/Price_Book_entry__c.object-meta.xml
<CustomObject>
    <label>Price Book Entry</label>
    <nameField>
        <displayFormat>Ramp-{000}</displayFormat>
        <label>Price Book Enty No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>