force-app/main/default/objects/Price_Book_entry__c/fields/Current_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Current_Stocks__c</fullName>
    <label>Current Stocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>