force-app/main/default/objects/Price_Book_entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>