force-app/main/default/objects/Price_Book_entry__c/fields/Qnty__c.field-meta.xml
<CustomField>
    <fullName>Qnty__c</fullName>
    <label>Qnty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>